Integrated allauth forms in layout - Removed labels

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ psycopg2 = "*"
 dj-database-url = "*"
 django-allauth = "*"
 django-crispy-forms = "*"
+django-cleanup = "*"
 
 [dev-packages]
 pylint-django = "*"
