--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ dj-database-url = "*"
 django-allauth = "*"
 django-crispy-forms = "*"
 django-cleanup = "*"
+pillow = "*"
 
 [dev-packages]
 pylint-django = "*"
