--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.3.1
 astroid==2.4.2
 autopep8==1.5.4
 black==20.8b1
+boto3==1.16.26
+botocore==1.19.26
 certifi==2020.11.8
 cffi==1.14.3
 chardet==3.0.4
@@ -14,11 +16,13 @@ Django==3.1.3
 django-allauth==0.43.0
 django-cleanup==5.1.0
 django-crispy-forms==1.10.0
+django-storages==1.10.1
 django-taggit==1.3.0
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
 isort==5.6.4
+jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -33,12 +37,14 @@ PyJWT==1.7.1
 pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 python3-openid==3.2.0
 pytz==2020.4
 regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
+s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
